Update text: remove dental references, add example PDF

--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
         <div class="why-marker"></div>
         <div>
           <h3>Proven at Scale</h3>
-          <p>Sagan has made 2,000+ global hires in the last 24 months across non-venture-backed, non-tech businesses — HVAC, landscaping, towing, dental, moving companies, and more. We know this world.</p>
+          <p>Sagan has made 2,000+ global hires in the last 24 months across non-venture-backed, non-tech businesses — HVAC, landscaping, towing, manufacturing, moving companies, and more. We know this world.</p>
         </div>
       </div>
     </div>
@@ -711,7 +711,7 @@
       <div>
         <div class="section-label reveal">See It in Action</div>
         <div class="section-title reveal">Example: Global Talent Strategy Report</div>
-        <p class="section-sub reveal" style="margin-bottom: 24px;">This is a real report we built for a $48M dental manufacturing acquisition — 16 locations, 397 employees. We identified 146 roles across case coordination, digital design, and marketing where global talent could drive significant post-acquisition value.</p>
+        <p class="section-sub reveal" style="margin-bottom: 24px;">This is a real report we built for a $48M manufacturing acquisition — 16 locations, 397 employees. We identified 146 roles across coordination, design, and marketing where global talent could drive significant post-acquisition value.</p>
         <p class="section-sub reveal">Yours will be customized for your specific deal, industry, and workforce structure.</p>
         <a href="/Global_Talent_Roadmap_Example.pdf" class="example-link reveal" style="margin-top: 24px;">View Example Report (PDF) →</a>
       </div>
@@ -721,7 +721,7 @@
             <div class="mock-dot"></div>
             <div>
               <div class="mock-title">Global Talent Strategy Report</div>
-              <div class="mock-sub">Dental Manufacturing Co. — 16 Locations</div>
+              <div class="mock-sub">Manufacturing Co. — 16 Locations</div>
             </div>
           </div>
           <div class="mock-bars">
